# NIGINart

./: .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  init-db.sql  nginx.conf  pyproject.toml  start-all.bat
dashboard/: app.py  config.py
dashboard/components/: account_manager.py  charts.py  filters.py  kpi_cards.py  tables.py  top_videos.py  video_table.py
dashboard/pages/: dzen.py  instagram.py  pinterest.py  telegram.py  tiktok.py  vk.py  wibes.py  youtube.py
dashboard/services/: api_client.py  cache_manager.py  data_processor.py
dashboard/utils/: constants.py  formatters.py  session_state.py
migrations/: env.py
migrations/versions/: 20251212_initial_schema.py  20251231_1547_c4baf51763b0_add_advertiser_id_to_account.py  20251231_add_oauth_credentials.py  20251231_create_oauth_states.py  20260101_0000_d2t99os4qe7j_add_instagram_story_snapshots.py  20260101_0705_813bec30b934_merge_tiktok_and_instagram_heads.py  20260101_0705_98b36e533eb9_add_tiktok_performance_indexes.py
scripts/: check_real_youtube_metrics.py  generate_historical_data.py  generate_legal_docs.py  generate_youtube_history.py  get_real_video_ids.py  init_telegram_session.py  init_telegram_session_v2.py  init_telegram_session_v3.py  real_youtube_video_ids.json  seed_accounts.py  test_collection.py  test_dashboard_charts.py  test_dashboard_youtube.py  test_parsers.py  test_youtube_detailed.py  test_youtube_graphs_detailed.py  test_youtube_subscriber_graph.py  test_youtube_video_links.py  test_youtube_video_sections.py  test_youtube_videos.py
src/: main.py
src/api/: dependencies.py
src/config/: settings.py
src/db/: __init__.py  database.py  repository.py
src/models/: __init__.py  account.py  base.py  collection_log.py  instagram_story_snapshot.py  metric.py  oauth_state.py  schemas.py
src/parsers/: __init__.py  base.py  dzen_parser.py  factory.py  instagram_parser.py  pinterest_parser.py  telegram_parser.py  (+7 more)
tests/: conftest.py
(+35 files in other folders)
