[project]
name = "social-analytics"
version = "1.0.0"
requires-python = ">=3.10"
description = "Social Media Analytics Dashboard for NIGINart brand"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # FastAPI & Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",

    # Configuration & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # HTTP Client (for future parsers)
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.41.0",
    "instaloader>=4.10.0",
    "telethon>=1.34.0",
    "vkbottle>=4.3.0",
    "vk-api>=11.9.9",
    "google-api-python-client>=2.115.0",
    "aiohttp>=3.9.0",

    # Security (OAuth token encryption)
    "cryptography>=42.0.0",

    # Scheduler
    "apscheduler>=3.10.0",

    # Dashboard
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "dashboard"]

[tool.setuptools.package-data]
dashboard = ["**/*.py"]
src = ["**/*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
